[gd_scene load_steps=5 format=3 uid="uid://jq4fjdr0imvr"]

[ext_resource type="Script" path="res://shop_sections/items/base_item.gd" id="1_hita5"]
[ext_resource type="Texture2D" uid="uid://cq4lurdndr0wb" path="res://art/items/Sprite-0003.png" id="2_7ixwu"]
[ext_resource type="Script" path="res://shop_sections/items/poup_detect.gd" id="3_sv7qq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f30m3"]
radius = 8.06226

[node name="item" type="Node2D"]
script = ExtResource("1_hita5")

[node name="item_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_7ixwu")

[node name="popup_detect" type="Area2D" parent="."]
script = ExtResource("3_sv7qq")
animation_type = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="popup_detect"]
shape = SubResource("CircleShape2D_f30m3")

[node name="initial_pos" type="Node2D" parent="popup_detect"]
position = Vector2(0, -4.55)

[node name="final_pos" type="Node2D" parent="popup_detect"]
position = Vector2(0, -10.82)

[connection signal="mouse_entered" from="popup_detect" to="popup_detect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="popup_detect" to="popup_detect" method="_on_mouse_exited"]
